# game_share_lib

./: .gitignore  AGENTS.md  Cargo.toml  INTEGRATION.md  README.md
frontend/src/: gamePanelApi.ts  hooks.ts  panel.ts  panelRoot.ts
frontend/src/components/admin/: AdminEmbeddedPanelCard.tsx  AdminServerActionPanel.tsx  AdminUserPanelFallback.tsx
frontend/src/components/console/: ConsoleInputBar.tsx  ConsoleLogList.tsx  ConsoleTabs.tsx  ConsoleToolbar.tsx
frontend/src/components/file/: FileActionDialog.tsx  FileArchiveTasksDropdown.tsx  FileBreadcrumbs.tsx  FileEditorDialog.tsx  FileFilterBar.tsx  FileGlyph.tsx  FileSelectionBar.tsx  FileTable.tsx  FileToolbar.tsx  FileUploadDialog.tsx
frontend/src/components/page/: PageHeader.tsx  PanelScaffold.tsx  PanelSurface.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  confirm-dialog.tsx  dialog.tsx  input.tsx  label.tsx  skeleton.tsx  switch.tsx
frontend/src/hooks/: useAdminServerWorkspace.ts  useFileManager.ts
frontend/src/lib/: fileManager.ts  renderAnsi.tsx  sha256.ts  statusText.ts  stripAnsi.ts  testAttrs.ts
frontend/src/pages/: SharedConsolePage.tsx  SharedFilesPage.tsx  SharedLogsPage.tsx  SharedManagerOverviewPage.tsx  SharedMetricsPage.tsx
rust/retterm-game-manager-modules/: Cargo.toml
rust/retterm-game-manager-modules/src/: auto_restart.rs  grafana.rs  lib.rs  loki.rs  manager_rules.rs  pushgateway.rs  upload.rs
rust/retterm-game-server-modules/: Cargo.toml
rust/retterm-game-server-modules/src/: archive_manager.rs  console.rs  filesystem.rs  lib.rs  metrics.rs
websocket_core/: Cargo.toml  README.md
websocket_core/src/: binproto.rs  contracts.rs  error.rs  lib.rs  peer.rs  session.rs  session_store.rs  text_frame.rs
websocket_runtime/: Cargo.toml  README.md
websocket_runtime/src/: client.rs  lib.rs  runtime.rs
