[package]
name = "retterm-game-websocket-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "retterm_game_websocket_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
