[package]
name = "retterm-game-websocket-runtime"
version = "0.1.0"
edition = "2024"

[lib]
name = "retterm_game_websocket_runtime"
path = "src/lib.rs"

[dependencies]
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
retterm-game-websocket-core = { path = "../websocket_core" }
