[package]
name = "retterm-game-server-modules"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libc = "0.2"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zip = "6.0.0"
flate2 = "1.0"
tar = "0.4"
